unpackaged/main/default/objects/Historique_Devis__c/Historique_Devis__c.object-meta.xml
<CustomObject>
    <description>Objet créé pour tracer les modifications effectuées sur le champ « Statut de la demande »</description>
    <label>Historique Devis</label>
    <nameField>
        <displayFormat>HQ-{00000}</displayFormat>
        <label>Historique Devis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques Devis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>