unpackaged/main/default/objects/Historique_Devis__c/fields/Ancienne_valeur__c.field-meta.xml
<CustomField>
    <fullName>Ancienne_valeur__c</fullName>
    <label>Ancienne valeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>