unpackaged/main/default/objects/Historique_Devis__c/fields/Champ_modifie__c.field-meta.xml
<CustomField>
    <fullName>Champ_modifie__c</fullName>
    <label>Champ modifié</label>
    <length>255</length>
    <type>Text</type>
</CustomField>