unpackaged/main/default/objects/Historique_Devis__c/fields/Date_Heure_modification__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_modification__c</fullName>
    <description>Date/Heure de la modification du champ</description>
    <label>Date/Heure modification</label>
    <type>DateTime</type>
</CustomField>