unpackaged/main/default/objects/Historique_Devis__c/fields/Devis__c.field-meta.xml
<CustomField>
    <fullName>Devis__c</fullName>
    <description>Utilisateur à l’origine de la modification</description>
    <label>Devis</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Historiques Devis</relationshipLabel>
    <relationshipName>Historiques_Devis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>