unpackaged/main/default/objects/Historique_Devis__c/fields/Modifier_Par__c.field-meta.xml
<CustomField>
    <fullName>Modifier_Par__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modifié par</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Historiques_Devis</relationshipName>
    <type>Lookup</type>
</CustomField>