unpackaged/main/default/objects/Historique_Devis__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>Nouvelle valeur</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>