unpackaged/main/default/objects/Historique_Devis__c/fields/Nouvelle_valeur__c.field-meta.xml
<CustomField>
    <fullName>Nouvelle_valeur__c</fullName>
    <label>NV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>