unpackaged/main/default/objects/Historique_Devis__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Ancienne valeur</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>