unpackaged/main/default/objects/Historique_Devis__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>H00</fullName>
            </value>
            <value>
                <fullName>H01</fullName>
            </value>
            <value>
                <fullName>H02</fullName>
            </value>
            <value>
                <fullName>H03</fullName>
            </value>
            <value>
                <fullName>H04</fullName>
            </value>
            <value>
                <fullName>H05</fullName>
            </value>
            <value>
                <fullName>H06</fullName>
            </value>
            <value>
                <fullName>H07</fullName>
            </value>
            <value>
                <fullName>H08</fullName>
            </value>
            <value>
                <fullName>H09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>